Add hermetic PYTHON 3.13 requirements lock file in Tensorflow project.
PiperOrigin-RevId: 705175049

--- a/ci/official/requirements_updater/numpy1_requirements/requirements.in
+++ b/ci/official/requirements_updater/numpy1_requirements/requirements.in
@@ -29,7 +29,7 @@ packaging==23.2
 setuptools==70.0.0
 jax==0.4.7
 # The dependencies below are needed for TF wheel testing.
-tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-io-gcs-filesystem >= 0.23.1 ; python_version < "3.12"
 libclang >= 13.0.0
 google_pasta ~= 0.2
 flatbuffers ~= 24.3.25
