Support buffer with offset when loading flatbuffer.
PiperOrigin-RevId: 706942025

--- a/tensorflow/lite/experimental/litert/core/model/BUILD
+++ b/tensorflow/lite/experimental/litert/core/model/BUILD
@@ -77,9 +77,9 @@ cc_library(
         "//tensorflow/lite/experimental/litert/cc:litert_buffer_ref",
         "//tensorflow/lite/experimental/litert/cc:litert_expected",
         "//tensorflow/lite/experimental/litert/cc:litert_macros",
+        "//tensorflow/lite/experimental/litert/core:filesystem",
         "//tensorflow/lite/experimental/litert/core/util:flatbuffer_tools",
         "//tensorflow/lite/schema:schema_fbs",
-        "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/strings:string_view",
     ],
 )
