Make pywrap rules replicate final artifacts structure to ensure backward compatibility with users who directly use TensorFlow's shared object files.
PiperOrigin-RevId: 708628972

--- a/tensorflow/compiler/mlir/lite/python/BUILD
+++ b/tensorflow/compiler/mlir/lite/python/BUILD
@@ -238,7 +238,7 @@ tf_python_pybind_extension(
         "_pywrap_converter_api.pyi",
     ],
     visibility = [
-        "//tensorflow/python:__pkg__",
+        "//tensorflow:__pkg__",
     ],
     deps = [
         "//tensorflow/compiler/mlir/quantization/tensorflow/python:py_function_lib",
