--- a/tensorflow/python/saved_model/BUILD
+++ b/tensorflow/python/saved_model/BUILD
@@ -928,6 +928,7 @@ tf_python_pybind_extension(
         "pywrap_saved_model/metrics.pyi",
     ],
     visibility = [
+        "//tensorflow:__pkg__",
         "//tensorflow/python:__pkg__",
         "//tensorflow/python/checkpoint:__subpackages__",
         "//tensorflow/python/tpu:__pkg__",
