--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -18,9 +18,6 @@ load(
     "pywrap_aware_cc_import",
     "pywrap_aware_filegroup",
     "pywrap_aware_genrule",
-    "pywrap_binaries",
-    "pywrap_common_library",
-    "pywrap_library",
     "pywrap_tensorflow_macro",
     "tf_external_workspace_visible",
     "tf_monitoring_python_deps",
@@ -1143,6 +1140,7 @@ tf_python_pybind_extension(
         "flags_pybind.pyi",
     ],
     visibility = [
+        "//tensorflow:__pkg__",
         "//tensorflow/core/config:__subpackages__",
         "//tensorflow/tools/pip_package:__subpackages__",
     ],
@@ -1355,6 +1353,7 @@ tf_python_pybind_extension(
         "_pywrap_parallel_device.pyi",
     ],
     visibility = [
+        "//tensorflow:__pkg__",
         "//tensorflow/python/distribute/parallel_device:__pkg__",
         "//tensorflow/tools/pip_package:__subpackages__",
     ],
@@ -1447,141 +1446,11 @@ pytype_strict_library(
     ],
 )
 
-pywrap_library(
-    name = "_pywrap_tensorflow",
-    cc_deps_filter = [
-        "@com_google_protobuf//:protobuf",
-        "@com_google_protobuf//:protobuf_lite",
-        "@zlib//:zlib",
-    ],
-    linkopts = select({
-        "//tensorflow:windows": [
-            "-DEFAULTLIB:ws2_32.lib",
-            "-DEFAULTLIB:advapi32.lib",
-            "-DEFAULTLIB:crypt32.lib",
-            "-DEFAULTLIB:Normaliz.lib",
-            "-DEFAULTLIB:ntdll.lib",
-        ],
-        "//conditions:default": [],
-    }),
-    py_cc_deps_filter = select({
-        "//tensorflow:windows": [],
-        "//conditions:default": [
-            "@local_xla//xla/tsl/python/lib/core:ml_dtypes_lib",
-            "@local_xla//xla/tsl/python/lib/core:numpy",
-            "@local_xla//xla/backends/profiler/cpu:python_tracer_impl",
-            "@local_xla//xla/backends/profiler/cpu:python_tracer",
-            "@local_xla//xla/python/profiler/internal:python_hooks",
-            "//tensorflow/lite/python/interpreter_wrapper:python_error_reporter",
-            "//tensorflow/lite/python/interpreter_wrapper:python_utils",
-            "//tensorflow/lite/toco/python:toco_python_api",
-            "//tensorflow/python/client:tf_session_helper",
-            "//tensorflow/python/eager:pywrap_tfe_lib",
-            "//tensorflow/python/framework:op_def_util_cc",
-            "//tensorflow/python/framework:py_context_manager",
-            "//tensorflow/python/framework:python_api_info",
-            "//tensorflow/python/framework:python_api_parameter_converter",
-            "//tensorflow/python/framework:python_tensor_converter",
-            "//tensorflow/python/framework:python_api_dispatcher",
-            "//tensorflow/python/lib/core:ndarray_tensor_bridge",
-            "//tensorflow/python/lib/core:ndarray_tensor",
-            "//tensorflow/python/lib/core:py_seq_tensor",
-            "//tensorflow/python/lib/core:py_util",
-            "//tensorflow/python/lib/core:py_exception_registry",
-            "//tensorflow/python/lib/core:py_func_lib",
-            "//tensorflow/python/util:cpp_python_util",
-            "//tensorflow/python/util:function_parameter_canonicalizer",
-            "//tensorflow/python/util:stack_trace",
-            "//tensorflow/python/util:cpp_nest",
-            "//tensorflow/compiler/mlir/lite/python:converter_python_api",
-            "//tensorflow/lite/python/metrics:metrics_wrapper_lib",
-            "//tensorflow/lite/python/interpreter_wrapper:interpreter_wrapper_lib",
-            "//tensorflow/lite/python/interpreter_wrapper:numpy",
-            "//tensorflow/lite/python/optimize:calibration_wrapper_lib",
-        ],
-    }),
-    visibility = ["//visibility:public"],
-    win_def_file = "_pywrap_tensorflow.def",
-    #    win_def_file = "_pywrap_tensorflow.def",
-    deps = [
-        ":_pywrap_quantize_training",
-        ":_pywrap_tensorflow_cc_only",
-        "//tensorflow/compiler/mlir/lite/python:_pywrap_converter_api",
-        "//tensorflow/compiler/mlir/python/mlir_wrapper:filecheck_wrapper",
-        "//tensorflow/compiler/mlir/quantization/stablehlo/python:pywrap_quantization",
-        "//tensorflow/compiler/mlir/quantization/tensorflow/python:pywrap_function_lib",
-        "//tensorflow/compiler/mlir/quantization/tensorflow/python:pywrap_quantize_model",
-        "//tensorflow/compiler/mlir/tfr:tfr_wrapper",
-        "//tensorflow/compiler/tf2tensorrt:_pywrap_py_utils",
-        "//tensorflow/lite/python/analyzer_wrapper:_pywrap_analyzer_wrapper",
-        "//tensorflow/lite/python/interpreter_wrapper:_pywrap_tensorflow_interpreter_wrapper",
-        "//tensorflow/lite/python/metrics:_pywrap_tensorflow_lite_metrics_wrapper",
-        "//tensorflow/lite/python/optimize:_pywrap_tensorflow_lite_calibration_wrapper",
-        "//tensorflow/python:_pywrap_dtensor_device",
-        "//tensorflow/python:_pywrap_mlir",
-        "//tensorflow/python:_pywrap_parallel_device",
-        "//tensorflow/python:_pywrap_py_exception_registry",
-        "//tensorflow/python:_pywrap_sanitizers",
-        "//tensorflow/python:_pywrap_tfcompile",
-        "//tensorflow/python:_pywrap_tfe",
-        "//tensorflow/python:_pywrap_toco_api",
-        "//tensorflow/python:flags_pybind",
-        "//tensorflow/python/autograph/impl/testing:pybind_for_testing",
-        "//tensorflow/python/client:_pywrap_debug_events_writer",
-        "//tensorflow/python/client:_pywrap_device_lib",
-        "//tensorflow/python/client:_pywrap_events_writer",
-        "//tensorflow/python/client:_pywrap_tf_session",
-        "//tensorflow/python/data/experimental/service:_pywrap_server_lib",
-        "//tensorflow/python/data/experimental/service:_pywrap_snapshot_utils",
-        "//tensorflow/python/data/experimental/service:_pywrap_utils_exp",
-        "//tensorflow/python/framework:_dtypes",
-        "//tensorflow/python/framework:_errors_test_helper",
-        "//tensorflow/python/framework:_op_def_library_pybind",
-        "//tensorflow/python/framework:_op_def_registry",
-        "//tensorflow/python/framework:_op_def_util",
-        "//tensorflow/python/framework:_proto_comparators",
-        "//tensorflow/python/framework:_py_context_manager",
-        "//tensorflow/python/framework:_python_memory_checker_helper",
-        "//tensorflow/python/framework:_pywrap_python_api_dispatcher",
-        "//tensorflow/python/framework:_pywrap_python_api_info",
-        "//tensorflow/python/framework:_pywrap_python_api_parameter_converter",
-        "//tensorflow/python/framework:_pywrap_python_op_gen",
-        "//tensorflow/python/framework:_pywrap_python_tensor_converter",
-        "//tensorflow/python/framework:_test_metrics_util",
-        "//tensorflow/python/framework/experimental:_math_ops",
-        "//tensorflow/python/framework/experimental:_nn_ops",
-        "//tensorflow/python/framework/experimental:_tape",
-        "//tensorflow/python/framework/experimental:_unified_api",
-        "//tensorflow/python/grappler:_pywrap_cost_analyzer",
-        "//tensorflow/python/grappler:_pywrap_model_analyzer",
-        "//tensorflow/python/grappler:_pywrap_tf_cluster",
-        "//tensorflow/python/grappler:_pywrap_tf_item",
-        "//tensorflow/python/grappler:_pywrap_tf_optimizer",
-        "//tensorflow/python/lib/core:_pywrap_py_func",
-        "//tensorflow/python/lib/io:_pywrap_file_io",
-        "//tensorflow/python/lib/io:_pywrap_record_io",
-        "//tensorflow/python/platform:_pywrap_cpu_feature_guard",
-        "//tensorflow/python/platform:_pywrap_stacktrace_handler",
-        "//tensorflow/python/platform:_pywrap_tf2",
-        "//tensorflow/python/profiler/internal:_pywrap_profiler",
-        "//tensorflow/python/profiler/internal:_pywrap_traceme",
-        "//tensorflow/python/saved_model:pywrap_saved_model",
-        "//tensorflow/python/tpu:_pywrap_sparse_core_layout",
-        "//tensorflow/python/tpu:_pywrap_tpu_embedding",
-        "//tensorflow/python/util:_function_parameter_canonicalizer_binding_for_test",
-        "//tensorflow/python/util:_pywrap_checkpoint_reader",
-        "//tensorflow/python/util:_pywrap_determinism",
-        "//tensorflow/python/util:_pywrap_kernel_registry",
-        "//tensorflow/python/util:_pywrap_nest",
-        "//tensorflow/python/util:_pywrap_tensor_float_32_execution",
-        "//tensorflow/python/util:_pywrap_tfprof",
-        "//tensorflow/python/util:_pywrap_transform_graph",
-        "//tensorflow/python/util:_pywrap_util_port",
-        "//tensorflow/python/util:_pywrap_utils",
-        "//tensorflow/python/util:_tf_stack",
-        "//tensorflow/python/util:fast_module_type",
-        "//tensorflow/python/util:pywrap_xla_ops",
-    ],
+pybind_extension(
+    name = "_pywrap_tensorflow_internal",
+    srcs = ["pywrap_tensorflow_internal.cc"],
+    pywrap_only = True,
+    deps = [],
 )
 
 pybind_extension(
@@ -1613,14 +1482,4 @@ cc_library(
         "//tensorflow/dtensor/proto:layout_proto_cc",
         "@local_tsl//tsl/profiler/protobuf:xplane_proto_cc",
     ],
-)
-
-pywrap_common_library(
-    name = "_pywrap_tensorflow_common",
-    dep = ":_pywrap_tensorflow",
-)
-
-pywrap_binaries(
-    name = "_pywrap_tensorflow_binaries",
-    dep = ":_pywrap_tensorflow",
 )
