--- a/tensorflow/python/profiler/internal/BUILD
+++ b/tensorflow/python/profiler/internal/BUILD
@@ -109,6 +109,7 @@ tf_python_pybind_extension(
     ],
     visibility = [
         "//perftools/accelerators/xprof/xprofilez/integration_tests:__pkg__",
+        "//tensorflow:__pkg__",
         "//tensorflow/python:__pkg__",
         "//tensorflow/python/profiler:__subpackages__",
         "//tensorflow/tools/pip_package:__subpackages__",
@@ -128,8 +129,8 @@ tf_python_pybind_extension(
         "_pywrap_profiler.pyi",
     ],
     visibility = [
+        "//tensorflow:__pkg__",
         "//tensorflow/core/profiler:internal",
-        "//tensorflow/python:__pkg__",
         "//tensorflow/python/eager:__pkg__",
         "//tensorflow/python/profiler:__pkg__",
         "//tensorflow/tools/pip_package:__subpackages__",
